edited quick-search logic

--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@inject Serenity.Navigation.INavigationModelFactory NavigationModelFactory
+@inject Serenity.Navigation.INavigationModelFactory NavigationModelFactory
 <!DOCTYPE html>
 @{
     Func<string, HtmlString> json = x => new HtmlString(Serenity.JSON.Stringify(x));
